Introducing batched execution requests
